# iptv-play80s

./: .gitignore  README.md  download.js  electron-builder.yml  electron.vite.config.ts  mpv.diff  package-lock.json  package.json  release-notes.md  rewrite.sh  tailwind.config.js  test-embed.js  test-embed2.js  test-embed3.js  test-ipc.js  test-wid-child.js  test-wid-geom.js  test-wid.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
.agents/: AGENTS.md
kodi_config/: settings.xml
resources/mpv/: mpv.com
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: epg.rs  lib.rs
src/main/: index.ts  store.ts
src/main/ipc/: handlers.ts  utils.ts
src/main/services/: m3u.service.ts  mpv.service.ts  xmltv.service.ts  xtream.service.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  env.d.ts  main.tsx
src/renderer/src/components/: ErrorBoundary.tsx  SearchBar.tsx  Sidebar.tsx
src/renderer/src/components/ui/: EpgCard.tsx  EpgModal.tsx  EpgProgressToast.tsx  GlobalDownloads.tsx  LoadingStates.tsx  ToastContainer.tsx
src/renderer/src/features/favorites/: FavoritesPage.tsx
src/renderer/src/features/live/: CategoryList.tsx  ChannelCard.tsx  LivePage.tsx
src/renderer/src/features/player/: EpgSidebar.tsx  PlayerControls.tsx  PlayerOverlay.tsx  (+1 more)
src/renderer/src/lib/: api.ts  m3u.ts  store.ts  types.ts  utils.ts
src/renderer/src/store/: content.store.ts  download.store.ts  player.store.ts  providers.store.ts
src/renderer/src/styles/: globals.css
(+4 files in other folders)
